--- a/views/addpage.html
+++ b/views/addpage.html
@@ -16,9 +16,16 @@
       </div>
     </div>
     
-    <div>PLACEHOLDER FOR PAGE CONTENT TEXTAREA FIELD</div>
+    <div>
+      <textarea name="content"></textarea>
+    </div>
     
-    <div>PLACEHOLDER FOR PAGE STATUS INPUT FIELD</div>
+    <div>
+      <select name="status">
+        <option>open</option>
+        <option>closed</option>
+      </select>
+    </div>
 
     <div class="col-sm-offset-2 col-sm-10">
       <button type="submit" class="btn btn-primary">submit</button>
